--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+* {
+  background-color: wheat;
+}
+
 h1 {
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.19);
   padding-left: 0.5rem;
@@ -27,10 +31,10 @@ h1 {
   border-radius: 9px;
   padding: 13px;
   margin-right: 7px;
-  border: 0px;
+  border: 3px solid yellowgreen;
   color: #ffffff;
 }
 
 .button:hover {
-  background-color: gray;
+  background-color: rgb(97, 97, 9);
 }
